# volta

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  pixi.toml  release-please-config.json  rust-toolchain.toml
.github/: dependabot.yml
.github/workflows/: build.yml  coverage.yml  release-please.yml  release.yml  test.yml
crates/archive/: Cargo.toml
crates/test-support/: Cargo.toml
crates/validate-npm-package-name/: Cargo.toml
crates/volta-core/: Cargo.toml
crates/volta-core/src/: command.rs  monitor.rs
crates/volta-core/src/error/: kind.rs
crates/volta-core/src/hook/: tool.rs
crates/volta-core/src/run/: binary.rs  executor.rs  mod.rs  node.rs  npm.rs  npx.rs  parser.rs  pnpm.rs  yarn.rs
crates/volta-core/src/tool/: registry.rs
crates/volta-core/src/tool/package/: install.rs
crates/volta-layout/: Cargo.toml
crates/volta-layout-macro/: Cargo.toml
crates/volta-layout-macro/src/: ast.rs
crates/volta-migrate/: Cargo.toml
crates/volta-migrate/src/: lib.rs  v4.rs
crates/volta-migrate/src/v3/: config.rs
src/command/list/: human.rs
tests/acceptance/: execute_binary.rs  volta_run.rs
tests/acceptance/support/: events_helpers.rs  sandbox.rs
tests/smoke/: autodownload.rs  direct_install.rs  main.rs  pnpm_link.rs  volta_run.rs
tests/smoke/support/: temp_project.rs
