[package]
name = "volta"
version = "2.0.3"
authors = [
    "David Herman <david.herman@gmail.com>",
    "Charles Pierce <cpierce.grad@gmail.com>",
]
license = "BSD-2-Clause"
repository = "https://github.com/volta-cli/volta"
edition = "2021"

[features]
cross-platform-docs = ["volta-core/cross-platform-docs"]
mock-network = ["mockito", "volta-core/mock-network"]
smoke-tests = []

[[bin]]
name = "volta-shim"
path = "src/volta-shim.rs"

[[bin]]
name = "volta-migrate"
path = "src/volta-migrate.rs"

[profile.release]
lto = "fat"
codegen-units = 1

[workspace]
members = ["crates/*"]

[workspace.dependencies]
# path crates
archive = { path = "crates/archive" }
fs-utils = { path = "crates/fs-utils" }
progress-read = { path = "crates/progress-read" }
test-support = { path = "crates/test-support" }
validate-npm-package-name = { path = "crates/validate-npm-package-name" }
volta-core = { path = "crates/volta-core" }
volta-layout = { path = "crates/volta-layout" }
volta-layout-macro = { path = "crates/volta-layout-macro" }
volta-migrate = { path = "crates/volta-migrate" }
# external deps
attohttpc = { version = "0.31.0", default-features = false, features = [
    "json",
    "compress",
] }
cfg-if = "1.0"
chain-map = "0.1.0"
ctrlc = "3.5.2"
# We manually configure the feature list here because 0.4.16 includes the
# `oldtime` feature by default to avoid a breaking change. Additionally, using
# the feature list explicitly lets us drop the `wasmbind` feature, which we do
# not need.
chrono = { version = "0.4.44", default-features = false, features = [
    "alloc",
    "std",
    "clock",
] }
ci_info = "0.14.15"
clap = { version = "4.6.1", features = ["color", "derive", "wrap_help"] }
clap_complete = "4.6.5"
cmdline_words_parser = "0.2.1"
console = ">=0.11.3, <1.0.0"
detect-indent = "0.1"
dirs = "6.0.0"
dunce = "1.0.5"
envoy = "0.1.3"
flate2 = "1.1"
fs2 = "0.4.3"
hamcrest2 = "0.3.0"
headers = "0.4"
httpdate = "1"
indexmap = "2.14.0"
indicatif = "0.18.4"
junction = "2.0.0"
log = { version = "0.4", features = ["std"] }
mockito = "0.31.1"
node-semver = "2"
once_cell = "1.21.4"
os_info = "3.15.0"
percent-encoding = "2.3.2"
proc-macro2 = "1.0.106"
quote = "1.0.2"
readext = "0.1.0"
regex = "1.12.3"
retry = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.150"
syn = "1.0.5"
tar = "0.4.46"
tee = "0.1.0"
tempfile = "3.27.0"
terminal_size = "0.4.4"
textwrap = "0.16.2"
thiserror = "2.0.18"
verbatim = "0.1"
walkdir = "2.5.0"
which = "8.0.2"
winreg = "0.56.0"
# Set features manually to drop usage of `time` crate: we do not rely on that
# set of capabilities, and it has a vulnerability. We also don't need to use
# every single compression algorithm feature since we are only downloading
# Node as a zip file
zip_rs = { version = "=2.4.2", package = "zip", default-features = false, features = [
    "deflate",
    "bzip2",
] }

[dependencies]
volta-core.workspace = true
serde.workspace = true
serde_json.workspace = true
once_cell.workspace = true
log.workspace = true
node-semver.workspace = true
clap.workspace = true
clap_complete.workspace = true
mockito = { workspace = true, optional = true }
textwrap.workspace = true
which.workspace = true
dirs.workspace = true
volta-migrate.workspace = true

[target.'cfg(windows)'.dependencies]
winreg.workspace = true

[dev-dependencies]
hamcrest2.workspace = true
envoy.workspace = true
ci_info.workspace = true
headers.workspace = true
cfg-if.workspace = true
test-support.workspace = true
