[package]
name = "archive"
version = "0.1.0"
authors = ["David Herman <david.herman@gmail.com>"]
edition = "2021"

[dependencies]
flate2.workspace = true
tar.workspace = true
zip_rs.workspace = true
tee.workspace = true
fs-utils.workspace = true
progress-read.workspace = true
verbatim.workspace = true
cfg-if.workspace = true
headers.workspace = true
thiserror.workspace = true
log.workspace = true

[target.'cfg(not(all(windows, target_arch = "aarch64")))'.dependencies]
attohttpc = { workspace = true, features = ["tls-rustls-native-roots"] }

[target.'cfg(all(windows, target_arch = "aarch64"))'.dependencies]
attohttpc = { workspace = true, features = ["tls-rustls-native-roots-ring"] }
