[package]
name = "volta-core"
version = "0.1.0"
authors = ["David Herman <david.herman@gmail.com>"]
edition = "2021"

[features]
mock-network = ["mockito"]
# The `cross-platform-docs` feature flag is used for generating API docs for
# multiple platforms in one build.
# See ci/publish-docs.yml for an example of how it's enabled.
# See volta-core::path for an example of where it's used.
cross-platform-docs = []

[dependencies]
terminal_size.workspace = true
indicatif.workspace = true
console.workspace = true
readext.workspace = true
serde_json = { workspace = true, features = ["preserve_order"] }
serde.workspace = true
archive.workspace = true
node-semver.workspace = true
cmdline_words_parser.workspace = true
fs-utils.workspace = true
cfg-if.workspace = true
tempfile.workspace = true
os_info.workspace = true
detect-indent.workspace = true
envoy.workspace = true
mockito = { workspace = true, optional = true }
regex.workspace = true
dirs.workspace = true
chrono.workspace = true
validate-npm-package-name.workspace = true
textwrap.workspace = true
log.workspace = true
ctrlc.workspace = true
walkdir.workspace = true
volta-layout.workspace = true
once_cell.workspace = true
dunce.workspace = true
ci_info.workspace = true
httpdate.workspace = true
headers.workspace = true
attohttpc.workspace = true
chain-map.workspace = true
indexmap.workspace = true
retry.workspace = true
fs2.workspace = true
which.workspace = true

[target.'cfg(windows)'.dependencies]
winreg.workspace = true
junction.workspace = true
