[package]
name = "volta-migrate"
version = "0.1.0"
authors = ["Charles Pierce <cpierce.grad@gmail.com>"]
edition = "2021"

[dependencies]
volta-core.workspace = true
volta-layout.workspace = true
log.workspace = true
tempfile.workspace = true
node-semver.workspace = true
serde_json = { workspace = true, features = ["preserve_order"] }
serde.workspace = true
walkdir.workspace = true
